--- a/src/pages/admin/perfil/[id].astro
+++ b/src/pages/admin/perfil/[id].astro
@@ -2,14 +2,17 @@
 import Layout from "../../../layouts/Layout.astro";
 import UserProfile from "../../../components/admin/perfil/Perfil";
 import Pastilla from "../../../components/ActAcademicas/detalle/Pastilla.astro";
+import PermisosDelUsuario from '../../../components/auth/PermisosDelUsuario';
+
 const { id } = Astro.params; // Obtener el id del usuario desde la ruta
 ---
 
-<Layout title="Perfil del usuario">
-    <Pastilla 
-    title={`Editar Perfil del usuario`}
-  />
-    <UserProfile client:only="react" userId={id}/>
-    <div class="mb-8"></div>
-</Layout>
-<!-- Aquí se mostraría el perfil del usuario -->
+<PermisosDelUsuario permiso="editarMiembro" client:only="react">
+    <Layout title="Perfil del usuario">
+        <Pastilla 
+        title={`Editar Perfil del usuario`}
+      />
+        <UserProfile client:only="react" userId={id}/>
+        <div class="mb-8"></div>
+    </Layout>
+</PermisosDelUsuario>
