--- a/src/pages/cursos/post/[id].astro
+++ b/src/pages/cursos/post/[id].astro
@@ -40,7 +40,7 @@ const pdfUrl = courseData.data()?.pdfUrl;
     <VistaBotonEditarCurso id={id} client:only="react" />
   </div>
 
-  <div class="px-32 w-full items-center justify-center">
+  <div class="xl:px-32 md:px-2 w-full items-center justify-center">
         <div class="">
           <Banner 
           title={courseData.data()?.title}
