--- a/src/components/ActAcademicas/detalle/Banner.astro
+++ b/src/components/ActAcademicas/detalle/Banner.astro
@@ -11,7 +11,7 @@ const { title, image, price, modality, duration, description } = Astro.props;
 
   <div class="bg-white p-4 relative">
     <div class="relative z-10 px-6">
-      <h1 class="md:text-7xl text-5xl font-bold mb-2">{title}</h1>
+      <h1 class="lg:text-7xl md:text-6xl sm:text-4xl text-2xl font-bold mb-2">{title}</h1>
       <div class="flex flex-wrap gap-8 my-6">
         <div>
             <Inscripcion client:only="react" title={title} />
