--- a/src/pages/noLoggedIn.astro
+++ b/src/pages/noLoggedIn.astro
@@ -3,23 +3,27 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout title="Página no autenticada">
-  <main class="flex items-center justify-center my-auto">
-    <div class="bg-white p-8 rounded-lg shadow-lg max-w-md text-center border border-blue-200">
-      <img 
-        src="/path/to/nursing-icon.png" 
-        alt="Icono de enfermería" 
-        class="mx-auto mb-4 h-16 w-16" 
-      />
-      <h1 class="text-3xl font-bold text-blue-600 mb-4">Acceso Denegado</h1>
-      <p class="mb-4 text-gray-700">
-        Esta página no está disponible para usuarios no autenticados. 
-        Por favor, autentíquese para acceder a esta página.
-      </p>
-      <a 
-        href="/" 
-        class="mt-4 inline-block bg-blue-600 text-white py-2 px-4 rounded hover:bg-blue-500 transition duration-300">
-        Volver a la página principal
-      </a>
+  <div class="flex flex-col flex-grow items-center justify-center p-6 bg-white text-gray-900 h-screen">
+
+    <div class="text-center">
+        <!-- Icono de archivo -->
+        <div class="flex justify-center">
+            <!-- Puedes reemplazar esto con una imagen similar a la que compartiste -->
+            
+            <img src="/media/barrera.png" alt="Icono de barrera" class="h-32 w-auto " />
+        </div>
+
+        <!-- Texto de error 404 -->
+        <h1 class="text-6xl font-bold text-gray-800 uppercase">Alto ahi</h1>
+        <p class="text-lg text-gray-600 mt-2">
+          No tienes permisos para acceder a esta página.
+        </p>
+
+        <!-- Enlace para volver al sitio -->
+        <a href="/" class="mt-6 inline-block text-customBlue hover:underline">
+            ⬅ Volver al inicio
+        </a>
     </div>
-  </main>
+  
+</div>
 </Layout>
