ultimo, casi casi

--- a/src/pages/noticias/noticia/[id].astro
+++ b/src/pages/noticias/noticia/[id].astro
@@ -60,7 +60,7 @@ const formatDate = (dateString: string) => {
     
             <!-- Título de la noticia -->
             <div class="mb-4">
-              <h1 class="text-5xl text-customBlue line-clamp-2 font-bold">
+              <h1 class="text-5xl text-customBlue font-bold">
                 {noticiaData.data()?.title}
               </h1>
             </div>
