--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,9 @@ const { title } = Astro.props;
 		<title>{title}</title>
 	</head>
 	<body class="flex flex-col flex-grow h-screen">
-		<LoadingSpinner client:only="react" />
+		<div class="z-50">
+			<LoadingSpinner client:only="react" />
+		</div>
 		<ViewTransitions />
 		<Header />
 
