--- a/src/pages/admin/dashboard.astro
+++ b/src/pages/admin/dashboard.astro
@@ -7,8 +7,8 @@ import Pastilla from '../../components/ActAcademicas/detalle/Pastilla.astro';
 ---
 
 <PermisosDelUsuario permiso="verDashboardAdmin" client:only="react">
-  <Layout title="Dashboard de Admin">
-    <Pastilla title="Dashboard de Admin" />
+  <Layout title="Gestor de Miembros">
+    <Pastilla title="Gestor de Miembros" />
     <main class="container mx-auto mt-8 p-4 h-screen ">
         <Vista client:only="react" />
     </main>
