--- a/src/pages/cursos/index.astro
+++ b/src/pages/cursos/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import VistaCardGrid from '../../components/views/VistaCardGrid';
 ---
 
-<Layout title="Act. Académicas">
+<Layout title="Cursos">
     <VistaCardGrid client:only="react" />
     <div class="mb-auto"></div>
 </Layout>
