--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,6 @@ import PrincipalSection from '../components/home/PrincipalSection.astro';
 import Layout from '../layouts/LayoutHome.astro';
 ---
 
-<Layout title="Bienvenido">
+<Layout title="Colegio de Enfermería - CECH">
 	<PrincipalSection />
 </Layout>
