--- a/src/pages/noticias/index.astro
+++ b/src/pages/noticias/index.astro
@@ -3,7 +3,7 @@ import Layout from '../../layouts/Layout.astro';
 import VistaNoticiasGrid from '../../components/views/VistaNoticiasGrid';
 ---
 
-<Layout title="Act. Académicas">
+<Layout title="Noticias">
     <VistaNoticiasGrid client:only="react" />
     <div class="mb-auto"></div>
 </Layout>
